--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             
         </p>
         <p>
-          Athiben & Annika
+          NAME
         </p>
         <p class="signed">ZEF</p>
         
